# ai-player

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_VERIFICATION.md  GITHUB_UPLOAD_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_README.md  PROJECT_MANIFEST.md  README.md  README.zh-CN.md  ROADMAP.md  VERIFICATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  upload-to-github.bat  upload-to-github.sh
.github/: CONTRIBUTING.md  PROFILE.md  README.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
ai_player/: __init__.py  cli.py  mcp_server.py
ai_player/config/: config.example.yaml  config.yaml
ai_player/knowledge/: README.md  baseline.json  test_history.json
ai_player/utils/: config_loader.py
docs/: README_EN.md  configuration.md  index.md
examples/: README.md  automated_test.py  basic_connection.py  bug_detection.py
tests/: README.md  conftest.py  test_connection.py
